#13 #14 Added UI and Unit Tests